agregando groups para distingir validaciones en procesos de POST y PUT