@@ -9,8 +9,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Map;
+import java.util.List;
 import java.util.stream.Collectors;
 
 
@@ -21,19 +20,19 @@ public class GlobalErrorHandler {
     @ExceptionHandler(Exception.class)
     public ResponseEntity<GenericResponseDTO<CustomErrorResponse>> handleDefaultException(Exception ex, WebRequest request) {
         CustomErrorResponse errorResponse = new CustomErrorResponse(LocalDateTime.now(),ex.getMessage(), request.getDescription(false));
-        return new ResponseEntity<>(new GenericResponseDTO<>(500,"internal-server-error",Arrays.asList(errorResponse)), HttpStatus.INTERNAL_SERVER_ERROR);
+        return new ResponseEntity<>(new GenericResponseDTO<>(500,"internal-server-error", List.of(errorResponse)), HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @ExceptionHandler(ModelNotFoundException.class)
     public ResponseEntity<GenericResponseDTO<CustomErrorResponse>> handleModelNotFoundException(ModelNotFoundException ex , WebRequest request){
         CustomErrorResponse errorResponse = new CustomErrorResponse(LocalDateTime.now(),ex.getMessage(), request.getDescription(false));
-        return new ResponseEntity<>(new GenericResponseDTO<>(404,"not-found", Arrays.asList(errorResponse)), HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(new GenericResponseDTO<>(404,"not-found", List.of(errorResponse)), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<GenericResponseDTO<CustomErrorResponse>> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex , WebRequest request){
         String message = ex.getBindingResult().getFieldErrors().stream().map(error->error.getField() + ": " + error.getDefaultMessage()).collect(Collectors.joining(","));
         CustomErrorResponse errorResponse = new CustomErrorResponse(LocalDateTime.now(),message, request.getDescription(false));
-        return new ResponseEntity<>(new GenericResponseDTO<>(400,"bad-request",Arrays.asList(errorResponse)),HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>(new GenericResponseDTO<>(400,"bad-request", List.of(errorResponse)),HttpStatus.BAD_REQUEST);
     }
 }
